force-app/main/default/objects/GTM_Form_Draft__c/GTM_Form_Draft__c.object-meta.xml
<CustomObject>
    <description>A part-finished assessment form, so a prospect who leaves can pick up where they left off. Holds only what that visitor typed on that link; it is replaced on every keystroke pause and deleted the moment the form is submitted.</description>
    <label>GTM Form Draft</label>
    <pluralLabel>GTM Form Drafts</pluralLabel>
    <nameField>
        <displayFormat>FD-{0000}</displayFormat>
        <label>Form Draft Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>