force-app/main/default/objects/GTM_Form_Draft__c/fields/Draft_JSON__c.field-meta.xml
<CustomField>
    <fullName>Draft_JSON__c</fullName>
    <description>The answers so far, as the form's own field map. Only fields the visitor filled in themselves are ever written here.</description>
    <label>Draft</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>