force-app/main/default/objects/GTM_Form_Draft__c/fields/Draft_Key__c.field-meta.xml
<CustomField>
    <fullName>Draft_Key__c</fullName>
    <description>&lt;engagement link id&gt;::&lt;visitor key&gt;. The external id the draft is upserted on, and the only way to reach it: the visitor key is a random value the browser generates and keeps, so a draft is readable only by the browser that wrote it. Not unique: a Guest User licence permits insert and read on a custom object and nothing else, so a save is an append and the newest row for a key is the draft. Indexed as an external id so that read stays cheap.</description>
    <label>Draft Key</label>
    <length>120</length>
    <externalId>true</externalId>
    <required>true</required>
    <type>Text</type>
</CustomField>