force-app/main/default/objects/GTM_Form_Draft__c/fields/Draft_Type__c.field-meta.xml
<CustomField>
    <fullName>Draft_Type__c</fullName>
    <description>Which of the two guest-writable draft populations this row belongs to. The two rows are otherwise implicitly distinguishable (a Booking row always has Draft_Key__c + Saved_Configuration__c; an Assessment row always has Resume_Token__c) but an implicit discriminator is exactly what breaks under a later refactor -- and here the failure mode is one guest population reading the other's answers. Both GtmFormDraftController and GtmAssessmentDraftController add "AND Draft_Type__c = '...'" to every WHERE clause and set it on every insert. Defaults to Booking so GtmFormDraftController's existing inserts (which never set this field) keep working untouched.</description>
    <label>Draft Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking</fullName>
                <default>true</default>
                <label>Booking</label>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>