force-app/main/default/objects/GTM_Form_Draft__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <description>30 days from the row's own CreatedDate, set on every appended row for a questionnaire draft (Draft_Type__c = 'Assessment'). Null on Booking rows -- that population has no expiry, by design (see GTM_Form_Draft__c's own description). GtmAssessmentDraftController.resumeDraft treats the most recent row's Expires_At__c as authoritative; it is not extended on save, so a life counted from last touch cannot be kept alive forever.</description>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>