force-app/main/default/objects/GTM_Form_Draft__c/fields/Furthest_Field__c.field-meta.xml
<CustomField>
    <fullName>Furthest_Field__c</fullName>
    <description>The last field they touched. Where a form is abandoned is more actionable than the fact that it was: it names the question people will not answer.</description>
    <label>Furthest Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>