force-app/main/default/objects/GTM_Form_Draft__c/fields/Last_Saved_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Saved_At__c</fullName>
    <description>When this specific row was written -- CreatedDate would do the same job, but a dedicated field keeps GtmAssessmentDraftController's resumeDraft response shape stable if CreatedDate ever becomes unreliable to expose (e.g. a future data migration). Questionnaire drafts only (Draft_Type__c = 'Assessment'); null on Booking rows.</description>
    <label>Last Saved At</label>
    <type>DateTime</type>
</CustomField>