force-app/main/default/objects/GTM_Form_Draft__c/fields/Pair_Key__c.field-meta.xml
<CustomField>
    <fullName>Pair_Key__c</fullName>
    <description>Which instrument pack (e.g. hubspot__sfmc) this questionnaire draft is being answered against. Configuration, not prospect data -- trimmed to field length rather than trusted. Null on Booking rows.</description>
    <label>Pair Key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>