force-app/main/default/objects/GTM_Form_Draft__c/fields/Saved_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Saved_Configuration__c</fullName>
    <description>The engagement link this draft was typed on. Set on both row types since ADR-0008 / backlog D11: the readiness questionnaire is no longer minted from a bare /assessment route -- it is hosted inside gtmConfigurator on /configurator, so an Assessment row now normally has an engagement link, and GtmAssessmentDraftController uses it to build an emailed resume URL that carries ?cfgId= as well as the token. Without it a resumed-from-email submission arrives unlinked: no Opportunity, no Account, no rep attribution, and scored against the default offering rather than the link's own. Still not required -- a standalone or link-less draft legitimately has none, and GtmAssessmentDraftController.asConfigId() degrades an unusable value to null rather than failing the save. GtmFormDraftController's own isLinkWritable() gate is what enforces this on the Booking path.</description>
    <label>Engagement Link</label>
    <referenceTo>GTM_Saved_Configuration__c</referenceTo>
    <relationshipLabel>Form Drafts</relationshipLabel>
    <relationshipName>GTM_Form_Drafts</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>