force-app/main/default/objects/GTM_Form_Draft__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>The visit the draft was last written in, so a resume can be tied back to the interaction trail that led to it.</description>
    <label>Session Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>