force-app/main/default/objects/GTM_Form_Draft__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Per-row status, not per-session status: with the append-and-count model every save inserts a new row, so this describes what THIS row is (an in-progress save, or the terminal submitted marker), not a mutable session state. Defaults to Open so GtmFormDraftController's Booking inserts (which never set this field) keep working untouched. GtmAssessmentDraftController sets Submitted only on the terminal row appended by closeDraft.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>