force-app/main/default/objects/GTM_Form_Draft__c/fields/Submitted_Request__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Request__c</fullName>
    <description>Populated only on the terminal row GtmAssessmentRequestController.closeDraft appends when the questionnaire is submitted. This is the revocation mechanism: GtmAssessmentDraftController.resumeDraft reads the MOST RECENT row for a token, and if that row has this populated, treats the token as spent and returns null -- without ever updating anything, which a guest cannot do in this org (see Resume_Token__c's description).</description>
    <label>Submitted Request</label>
    <referenceTo>GTM_Assessment_Request__c</referenceTo>
    <relationshipLabel>Assessment Drafts</relationshipLabel>
    <relationshipName>GTM_Assessment_Drafts</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>